# slice-of-life

./: .gitignore  README.md  play.py  pyproject.toml
docs/plans/: 2026-04-18-action-agent-runtime-decision-draft.md  2026-04-18-flash-crash-demo.md  2026-04-18-game-factory-architecture-audit.md  2026-04-18-initial-world-generator.md  2026-04-18-multi-role-seed-iteration.md  2026-04-19-agent-run-state-reaction-schema.md  2026-04-19-generated-action-runtime-contract.md  README.md
eventforge/: __init__.py  __main__.py
examples/materials/: boeing-max9.md  crowdstrike-outage.md  key-bridge-collapse.md
examples/research/: cz-star-xu-public-conflict.json  wuhan-university-yang-jingyuan.json
examples/worlds/: cz-star-xu-public-conflict-cz.json  cz-star-xu-public-conflict-star-xu-okx-camp.json  wuhan-university-yang-jingyuan-school.json  wuhan-university-yang-jingyuan-yang-jingyuan.json
src/eventforge/: __init__.py  __main__.py  domain.py  engine.py  llm.py  research.py  scenarios.py  worldgen.py
tests/: test_cli.py  test_engine.py  test_game_factory_models.py  test_llm.py  test_research.py  test_scenarios.py  test_worldgen.py
